// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches the snapshot with all modifiers 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-compass__panel pf-m-pill pf-m-no-border pf-m-no-padding pf-m-gradient-border pf-m-thinking pf-m-full-height pf-m-scrollable"
  >
    <div>
      Panel with all modifiers
    </div>
  </div>
</DocumentFragment>
`;

exports[`Matches the snapshot with no modifiers 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-compass__panel"
  >
    <div>
      Basic panel
    </div>
  </div>
</DocumentFragment>
`;
